2005-09-07 Toady <toady@gscore.org>

	* src/draw.c, src/draw_staff.c: cairoized and moved to the appropriate file the function draw_staff_extension
	* src/layout-engine.c: use of draw_staff_extension function
	
2005-09-05 Toady <toady@gscore.org>

	* src/gscore-cairo.c, src/include/gscore-cairo.h: added
	* src/tab-transposition.c, src/include/tab-transposition.h: removed
	* src/score.c, src/layout-engine.c, src/include/gscore.h, src/selection.c, src/include/selection.h: object selection rewritten
	* src/draw_note_rest.c: Stem up/down handled
	* src/objects_callbacks.c: more callbacks handled
	* src/objects.c: get pitch cursor function added, get index for an object too
	* src/draw_barline.c: draw barlines
	* src/key_event.c: manage tab key
	* src/staff.c: staff_get_y_for_line function added
	
2005-08-29 Toady <toady@gscore.org>

	* src/layout-engine.c, src/selection.c: rewrote selection

2005-08-25 Toady <toady@gscore.org>

	* src/pitch_cursor.c, src/objects.c, src/layout-engine.c: handling the pitch cursor moving anytime you add an object
	
2005-07-26 Toady <toady@gscore.org>

	* src/score.c, src/layout-engine.c: droped the score widget in favor of the drawing area, since it is the hell to follow the cairo developement, I prefer letting gtk+ folks doing this job. I might come back on this widget latter, but I don't want to be too late (well, I am already!).
	
2005-07-26 Toady <toady@gscore.org>

	* src/score-object-manager.c, src/include/score-object-manager.h: added
	
2005-06-10 Toady <toady@gscore.org>

	* src/draw_note.c, src/include/draw_note.h: added
	* src/layout-engine.c: start to handle notes
	
2005-05-21 Toady <toady@gscore.org>

	* src/draw_pitch_cursor.c, src/include/draw_pitch/cursor.h: added
	* src/include/constants.h, src/staff.c, src/layout-engine.c: support of the pitch cursor

2005-05-20 Toady <toady@gscore.org>

	* src/staff.c, glade/gscore.glade: time signature fully working
	
2005-05-10 Toady <toady@gscore.org>
